force-app/main/default/objects/CSA__c/CSA__c.object-meta.xml
<CustomObject>
    <description>Object holds CSA online templates</description>
    <label>CSA</label>
    <nameField>
        <displayFormat>CSA{00000000}</displayFormat>
        <label>CSA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>