force-app/main/default/objects/CSA__c/fields/Administration_Fee_Direct_Debit_Waived__c.field-meta.xml
<CustomField>
    <fullName>Administration_Fee_Direct_Debit_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administration Fee Direct Debit Waived</label>
    <type>Checkbox</type>
</CustomField>