force-app/main/default/objects/CSA__c/fields/AMEX_Diners_Fee_Direct_Debit_Waived__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Diners_Fee_Direct_Debit_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMEX Fee Direct Debit Waived</label>
    <type>Checkbox</type>
</CustomField>