force-app/main/default/objects/CSA__c/fields/AMEX_Diners_Paid_By_Xero__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Diners_Paid_By_Xero__c</fullName>
    <label>AMEX Paid By Xero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>