force-app/main/default/objects/CSA__c/fields/Amex_Fee_OP_Waived__c.field-meta.xml
<CustomField>
    <fullName>Amex_Fee_OP_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Online payments Amex Fee is Waved</description>
    <label>Amex Fee OP Waived</label>
    <type>Checkbox</type>
</CustomField>