force-app/main/default/objects/CSA__c/fields/AMEX_MID_Hidden__c.field-meta.xml
<CustomField>
    <fullName>AMEX_MID_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To hide AMEX MID section on fee structure page.</description>
    <inlineHelpText>To hide AMEX MID section on fee structure page.</inlineHelpText>
    <label>AMEX MID Hidden</label>
    <type>Checkbox</type>
</CustomField>