force-app/main/default/objects/CSA__c/fields/Amex_Transaction_Fee_OP_Waived__c.field-meta.xml
<CustomField>
    <fullName>Amex_Transaction_Fee_OP_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Online payment Amex transaction fee is waived</description>
    <label>Amex Transaction Fee OP Waived</label>
    <type>Checkbox</type>
</CustomField>