force-app/main/default/objects/CSA__c/fields/AMEX_Waived__c.field-meta.xml
<CustomField>
    <fullName>AMEX_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMEX Waived</label>
    <type>Checkbox</type>
</CustomField>