force-app/main/default/objects/CSA__c/fields/Bank_Account_Fee_Direct_Debit_Waived__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Fee_Direct_Debit_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Account Fee Direct Debit Waived</label>
    <type>Checkbox</type>
</CustomField>