force-app/main/default/objects/CSA__c/fields/BPAY_Payments_pro__c.field-meta.xml
<CustomField>
    <fullName>BPAY_Payments_pro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BPAY Payments pro section</description>
    <label>BPAY Payments pro</label>
    <type>Checkbox</type>
</CustomField>