force-app/main/default/objects/CSA__c/fields/BPAY_Payments_std__c.field-meta.xml
<CustomField>
    <fullName>BPAY_Payments_std__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BPAY Payments standard section</description>
    <label>BPAY Payments std</label>
    <type>Checkbox</type>
</CustomField>