force-app/main/default/objects/CSA__c/fields/Business_Details__c.field-meta.xml
<CustomField>
    <fullName>Business_Details__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Your business details section</description>
    <inlineHelpText>Must have</inlineHelpText>
    <label>Business Details</label>
    <type>Checkbox</type>
</CustomField>