force-app/main/default/objects/CSA__c/fields/CSA_URL__c.field-meta.xml
<CustomField>
    <fullName>CSA_URL__c</fullName>
    <formula>HYPERLINK ($Setup.Global_Settings__c.SiteURL__c &amp; &quot;/CSAStep1?oppId=&quot;&amp;  Opportunity__c  &amp; &quot;&amp;csa=&quot; &amp;  Id  ,&quot;Click here to view client service agreement&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSA URL</label>
    <type>Text</type>
</CustomField>