force-app/main/default/objects/CSA__c/fields/Customer_statement__c.field-meta.xml
<CustomField>
    <fullName>Customer_statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer statement section</description>
    <label>Customer statement</label>
    <type>Checkbox</type>
</CustomField>