force-app/main/default/objects/CSA__c/fields/Customer_statement_frequency__c.field-meta.xml
<CustomField>
    <fullName>Customer_statement_frequency__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Customer statement frequency</label>
    <type>Checkbox</type>
</CustomField>