force-app/main/default/objects/CSA__c/fields/DD_VM_Transaction_Fee_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>DD_VM_Transaction_Fee_Paid_By__c</fullName>
    <label>DD_VM_Transaction_Fee_Paid_By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>