force-app/main/default/objects/CSA__c/fields/Direct_Debit_Failed_Payment_Fee_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Failed_Payment_Fee_Paid_By__c</fullName>
    <description>Indicator who director debit failed payment fee is paid by, e.g. business or customer</description>
    <label>Direct Debit Failed Payment Fee Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>