force-app/main/default/objects/CSA__c/fields/Direct_Debit_Fee_fromAmex_Diner_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Fee_fromAmex_Diner_Paid_By__c</fullName>
    <label>Direct Debit Fee fromAmex Diner Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>