force-app/main/default/objects/CSA__c/fields/DirectDebit_Min_Fee_Amex_Diner_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>DirectDebit_Min_Fee_Amex_Diner_Paid_By__c</fullName>
    <label>DirectDebit Min Fee Amex Diner Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>