force-app/main/default/objects/CSA__c/fields/Dishonour_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Dishonour_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dishonour Fee Waived</label>
    <type>Checkbox</type>
</CustomField>