force-app/main/default/objects/CSA__c/fields/eCommerce_pro__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_pro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>eCommerce pro section</description>
    <label>eCommerce pro</label>
    <type>Checkbox</type>
</CustomField>