force-app/main/default/objects/CSA__c/fields/eCommerce_std__c.field-meta.xml
<CustomField>
    <fullName>eCommerce_std__c</fullName>
    <defaultValue>false</defaultValue>
    <description>eCommerce standard section</description>
    <label>eCommerce std</label>
    <type>Checkbox</type>
</CustomField>