force-app/main/default/objects/CSA__c/fields/EFTPOS__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EFTPOS</label>
    <type>Checkbox</type>
</CustomField>