force-app/main/default/objects/CSA__c/fields/EFTPOS_Amex_Transaction_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Amex_Transaction_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If EFTPOS Amex transaction flat fee is waived</description>
    <label>EFTPOS Amex Transaction Fee Waived</label>
    <type>Checkbox</type>
</CustomField>