force-app/main/default/objects/CSA__c/fields/EFTPOS_Debit_Card_Transaction_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Debit_Card_Transaction_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If EFTPOS cards transaction flat fee is waived</description>
    <label>EFTPOS Debit Card Transaction Fee Waived</label>
    <type>Checkbox</type>
</CustomField>