force-app/main/default/objects/CSA__c/fields/EFTPOS_Manual_Input_Enabled__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Manual_Input_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags if Manual Input is enabled on their EFTPOS terminals</description>
    <inlineHelpText>Only an option if Quest is the EFTPOS provider</inlineHelpText>
    <label>EFTPOS Manual Input</label>
    <type>Checkbox</type>
</CustomField>