force-app/main/default/objects/CSA__c/fields/EFTPOS_MOTO__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_MOTO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EFTPOS MOTO</label>
    <type>Checkbox</type>
</CustomField>