force-app/main/default/objects/CSA__c/fields/EFTPOS_Setup_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Setup_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EFTPOS Setup Fee Waived</label>
    <type>Checkbox</type>
</CustomField>