force-app/main/default/objects/CSA__c/fields/EFTPOS_Tipping_Enabled__c.field-meta.xml
<CustomField>
    <fullName>EFTPOS_Tipping_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags if Tipping is enabled on their EFTPOS terminals</description>
    <inlineHelpText>Only an option if Quest is the EFTPOS provider</inlineHelpText>
    <label>EFTPOS Tipping</label>
    <type>Checkbox</type>
</CustomField>