force-app/main/default/objects/CSA__c/fields/Establishment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Establishment Fee</label>
    <type>Checkbox</type>
</CustomField>