force-app/main/default/objects/CSA__c/fields/Execution__c.field-meta.xml
<CustomField>
    <fullName>Execution__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Your Execution section</description>
    <inlineHelpText>Must have</inlineHelpText>
    <label>Execution</label>
    <type>Checkbox</type>
</CustomField>