force-app/main/default/objects/CSA__c/fields/Failed_Payment_Fee_Direct_Debit_Waived__c.field-meta.xml
<CustomField>
    <fullName>Failed_Payment_Fee_Direct_Debit_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator whether display failed payment fee direct debit waived</description>
    <label>Failed Payment Fee Direct Debit Waived</label>
    <type>Checkbox</type>
</CustomField>