force-app/main/default/objects/CSA__c/fields/Failed_Transaction_Fee_DD_Waived__c.field-meta.xml
<CustomField>
    <fullName>Failed_Transaction_Fee_DD_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Failed Transaction Fee is used to enable charging for failed Direct Debit Bank Account transactions which payed by the business.</description>
    <label>Failed Transaction Fee DD Waived</label>
    <type>Checkbox</type>
</CustomField>