force-app/main/default/objects/CSA__c/fields/Hide_Product_Fee_Variation__c.field-meta.xml
<CustomField>
    <fullName>Hide_Product_Fee_Variation__c</fullName>
    <description>The selected products from the list will hide Fee Variation</description>
    <label>Hide Product Fee Variation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>BPAY</fullName>
            </value>
            <value>
                <fullName>Xero - RealTime</fullName>
            </value>
            <value>
                <fullName>Xero - BPAY</fullName>
            </value>
            <value>
                <fullName>EFTPOS</fullName>
            </value>
            <value>
                <fullName>EFTPOS (SmartPay)</fullName>
            </value>
            <value>
                <fullName>Visa/MasterCard (Real Time)</fullName>
            </value>
            <value>
                <fullName>Visa/MasterCard</fullName>
            </value>
            <value>
                <fullName>Amex / Diners (RealTime)</fullName>
            </value>
            <value>
                <fullName>Bank Account (Direct Debit)</fullName>
            </value>
            <value>
                <fullName>AMEX/Diners</fullName>
            </value>
            <value>
                <fullName>PayTo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>