force-app/main/default/objects/CSA__c/fields/incl_GST_per_SMS_Direct_Debit_Waived__c.field-meta.xml
<CustomField>
    <fullName>incl_GST_per_SMS_Direct_Debit_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>incl GST per SMS Direct Debit Waived</label>
    <type>Checkbox</type>
</CustomField>