force-app/main/default/objects/CSA__c/fields/International_Card_Fee__c.field-meta.xml
<CustomField>
    <fullName>International_Card_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Card Fee Levy</label>
    <type>Checkbox</type>
</CustomField>