force-app/main/default/objects/CSA__c/fields/isAddProduct__c.field-meta.xml
<CustomField>
    <fullName>isAddProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAddProduct</label>
    <type>Checkbox</type>
</CustomField>