force-app/main/default/objects/CSA__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <description>If adding a new picklist value, please upload the logo image to documents with the following document name format: CSA_&lt;insert logo name&gt; e.g. CSA_XERO</description>
    <label>Logo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AccelerWare</fullName>
            </value>
            <value>
                <fullName>billingbureau</fullName>
            </value>
            <value>
                <fullName>breezeprofessionals</fullName>
            </value>
            <value>
                <fullName>centaman</fullName>
            </value>
            <value>
                <fullName>clientconnect</fullName>
            </value>
            <value>
                <fullName>clubworx</fullName>
            </value>
            <value>
                <fullName>codeberg</fullName>
            </value>
            <value>
                <fullName>Console</fullName>
            </value>
            <value>
                <fullName>emersion</fullName>
            </value>
            <value>
                <fullName>envibe</fullName>
            </value>
            <value>
                <fullName>ezemember</fullName>
            </value>
            <value>
                <fullName>ezycollect</fullName>
            </value>
            <value>
                <fullName>Fully Booked</fullName>
            </value>
            <value>
                <fullName>GenieSolutions</fullName>
            </value>
            <value>
                <fullName>gladstone</fullName>
            </value>
            <value>
                <fullName>Glofox</fullName>
            </value>
            <value>
                <fullName>GuestPoint</fullName>
            </value>
            <value>
                <fullName>gymmaster</fullName>
            </value>
            <value>
                <fullName>HBSalon</fullName>
            </value>
            <value>
                <fullName>igofigure</fullName>
            </value>
            <value>
                <fullName>influx</fullName>
            </value>
            <value>
                <fullName>intellifitness</fullName>
            </value>
            <value>
                <fullName>jillofalltrades</fullName>
            </value>
            <value>
                <fullName>kidswizz</fullName>
            </value>
            <value>
                <fullName>kindymanager</fullName>
            </value>
            <value>
                <fullName>kodakorthotrac</fullName>
            </value>
            <value>
                <fullName>linkfit</fullName>
            </value>
            <value>
                <fullName>makinglifeezy</fullName>
            </value>
            <value>
                <fullName>Mindbody</fullName>
            </value>
            <value>
                <fullName>northernbusinessconsultants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>