force-app/main/default/objects/CSA__c/fields/Min_Month_Fee__c.field-meta.xml
<CustomField>
    <fullName>Min_Month_Fee__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Min Month Fee</label>
    <type>Checkbox</type>
</CustomField>