force-app/main/default/objects/CSA__c/fields/Min_Month_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Min_Month_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Min Month Fee Waived</label>
    <type>Checkbox</type>
</CustomField>