force-app/main/default/objects/CSA__c/fields/Online_Payments__c.field-meta.xml
<CustomField>
    <fullName>Online_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When merchant is interested in Online Payment ,this field will be checked.</description>
    <inlineHelpText>Eway</inlineHelpText>
    <label>Online Payments</label>
    <type>Checkbox</type>
</CustomField>