force-app/main/default/objects/CSA__c/fields/PayID__c.field-meta.xml
<CustomField>
    <fullName>PayID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is PayID Selected</description>
    <label>PayID</label>
    <type>Checkbox</type>
</CustomField>