force-app/main/default/objects/CSA__c/fields/PayID_Service_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>PayID_Service_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PayID Service Fee Waived</description>
    <label>PayID Service Fee Waived</label>
    <type>Checkbox</type>
</CustomField>