force-app/main/default/objects/CSA__c/fields/PayID_Transaction_Fee_Waived__c.field-meta.xml
<CustomField>
    <fullName>PayID_Transaction_Fee_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is PayID Transaction Fee Waived</description>
    <label>PayID Transaction Fee Waived</label>
    <type>Checkbox</type>
</CustomField>