force-app/main/default/objects/CSA__c/fields/PayTo__c.field-meta.xml
<CustomField>
    <fullName>PayTo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is PayTo selected?</description>
    <label>PayTo</label>
    <type>Checkbox</type>
</CustomField>